--- a/src/view/forms/DateForm.mxml
+++ b/src/view/forms/DateForm.mxml
@@ -11,7 +11,7 @@
     </suportclasses:layout>
 
     <s:FormHeading skinClass="skins.FormHeadingSkin" height="0"/>
-    <s:FormItem label="Date" skinClass="skins.StackedFormItemSkin">
+    <s:FormItem label="{label}" skinClass="skins.StackedFormItemSkin">
         <mx:DateField id="dateField" width="100%"
                       selectedDate="{bindableDate}" change="dateField_changeHandler(event)"/>
     </s:FormItem>
@@ -22,12 +22,47 @@
 
         import view.interfaces.ISurfaceComponent;
 
-        private static const FIELD_SELECTED_DATE:String = "selectedDate";
-
         [Bindable]
         public var bindableDate:Date;
 
         private var _binding:ChangeWatcher;
+
+        private var _label:String = "Date";
+
+        [Bindable("labelChange")]
+        public function get label():String
+        {
+            return this._label;
+        }
+
+        public function set label(value:String):void
+        {
+            if (this._label === value)
+            {
+                return;
+            }
+            this._label = value;
+            this.dispatchEvent(new Event("labelChange"));
+        }
+
+        private var _textProperty:String = "selectedDate";
+
+        [Bindable("change")]
+        public function get textProperty():String
+        {
+            return this._textProperty;
+        }
+
+        public function set textProperty(value:String):void
+        {
+            if (this._textProperty === value)
+            {
+                return;
+            }
+            this._textProperty = value;
+            this.updateBinding();
+            this.dispatchEvent(new Event(Event.CHANGE));
+        }
 
         override public function set selectedItem(value:ISurfaceComponent):void
         {
@@ -37,7 +72,7 @@
 
         private function dateField_changeHandler(event:Event):void
         {
-            selectedItem[FIELD_SELECTED_DATE] = this.dateField.selectedDate;
+            selectedItem[textProperty] = this.dateField.selectedDate;
         }
 
         private function updateBinding():void
@@ -51,7 +86,7 @@
             {
                 return;
             }
-            this._binding = BindingUtils.bindProperty(this, "bindableDate", this.selectedItem, FIELD_SELECTED_DATE, true);
+            this._binding = BindingUtils.bindProperty(this, "bindableDate", this.selectedItem, textProperty, true);
         }
 
         private function onDateFormCreationComplete(event:FlexEvent):void
