- Highlight color changes to Organizer and resizer for better prominency - Deleting in editor now updates to Organizer - Deleting in Organizer now deletes in editor - Selecting item in editor now highlight item in Organizer and auto-scroll - Selecting item in organizer now selects item in editor (no auto-scroll) - Drag-n-drop rules updated to editor with betterment (reference prominic/Moonshine-IDE#350)

--- a/src/skins/ResizerHandleSkin.mxml
+++ b/src/skins/ResizerHandleSkin.mxml
@@ -53,7 +53,7 @@
 	<s:Rect id="fill" left="1" right="1" top="1" bottom="1" radiusX="6">
 		<s:fill>
 			<s:LinearGradient rotation="90">
-				<s:GradientEntry color="0xFFFFFF"
+				<s:GradientEntry color="0xFF0000"
 					color.over="0xBBBDBD"
 					color.down="0xAAAAAA"
 					alpha="0.85" />
